fix style gap,font-size,media, fix script.js

--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,10 @@ body {
     overflow: hidden;
 }
 
+.modal-screen {
+    width: 100vw;
+    height: 100vh;
+}
 .title-box {
     width: 100%;
     height: 20%;
@@ -39,40 +43,18 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 64px;
-}
-@media (max-width: 550px) {
-    .title-box__left-box {
-        gap: 34px;
-    }
 }
 .title-box__title-text {
-    font-size: 3.2em;
+    font-size: 7vh;
     font-weight: 500;
     color: white;
     text-transform: uppercase;
 }
-@media (max-width: 900px) {
-    .title-box__title-text {
-        font-size: 2em;
-    }
-}
-@media (max-width: 500px) {
-    .title-box__title-text {
-        font-size: 1.2em;
-    }
-}
 .title-box__description-text {
-    font-size: 2em;
+    font-size: 4vh;
     color: #f1f1f180;
+    padding-left: 3vw;
 }
-@media (max-width: 900px) {
-    .title-box__description-text {
-        font-size: 1em;
-        color: #f1f1f180;
-    }
-}
-
 .title-box__exit {
     text-align: center;
     display: flex;
@@ -104,13 +86,11 @@ body {
     overflow-y: scroll;
     padding: 0 9vw;
     padding-top: 2vw;
-    gap: 3vw;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: flex-start;
 
     -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
 }
 .more-than-eight::-webkit-scrollbar { width: 0;}
 
@@ -118,7 +98,6 @@ body {
     max-width: 100%;
     display: flex;
     padding: 0 9vw;
-    gap: 3vw;
     flex-wrap: wrap;
     align-content: center;
     justify-content: flex-start;
@@ -126,28 +105,24 @@ body {
 .less-than-four {
     display: flex;
     padding: 0 9vw;
-    gap: 3vw;
     align-items: center;
     justify-content: center;
 }
 .content__data-block {
     min-width: 18vw;
     max-width: 18vw;
+    margin: 1vw;
     height: 30vh;
     border-radius: 1vh;
     background: linear-gradient(#141A1E, #141a1e6a);    
-    padding: 20px;
+    padding: 2%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
-@media (max-width: 550px) {
-    .content__data-block {
-        padding: 10px;
-    }
-}
+
 .content__data-block-dark {
     background-color: rgba(20, 26, 30, 0.8);
   }
@@ -161,16 +136,17 @@ body {
     color: white;
     font-size: 2vw;
     display: flex;
-    gap: 0.1vw;
     font-weight: 600;
 }
 .content__data-block--dollar-sign {
     color: #ffbb00;
     font-weight: 600;
+    padding-right: 0.5vw;
 }
 .content__data-block--dollar-sign-green {
     color: #11ff00;
     font-weight: 600;
+    padding-right: 0.5vw;
 }
 .content__data-block--premium-img {
     width: 2.5vw;
